@@ -94,6 +94,7 @@ dejagnu.test \
 depacl.test \
 depacl2.test \
 depcomp.test \
+depcomp2.test \
 depend.test \
 depend2.test \
 depend3.test \
